--- a/index.html
+++ b/index.html
@@ -10,5 +10,11 @@
 <body>
     <h1>Discover hidden places in the world around you</h1>
     <a href="" target="_blank">Download Excursion(Coming soon!)</a>
+    <p>
+      <video loop autoplay>
+          <source src="resources/videos/excursion.mp4" type="video/mp4">
+          video not supported
+      </video>
+    </p>
 </body>
 </html>
