--- a/index.html
+++ b/index.html
@@ -9,12 +9,25 @@
 </head>
 <body>
     <h1>Discover hidden places in the world around you</h1>
-    <a href="" target="_blank">Download Excursion(Coming soon!)</a>
+    <a href="">Download Excursion (Coming soon!)</a>
     <p>
       <video loop autoplay>
           <source src="resources/videos/excursion.mp4" type="video/mp4">
           video not supported
       </video>
     </p>
+    <div>
+        <h2>Your personal travel guide</h2>
+        <p class="text">Excursion remembers places you like, and recommends new points of interest around you.</p>
+        <img src="resources/images/camp.jpg" alt="camp image">
+    </div>
+    <div>
+        <p><img src="resources/images/phone.png" alt="phone image"></p>
+        <h2>Coming soon for iPhone and Android</h2>
+        <a href="">Download Excursion (Coming soon!)</a>
+    </div>
+    <div class="text footer">
+        <p>© Excursion </p>
+    </div>
 </body>
 </html>
