Clean code and complete project

--- a/index.html
+++ b/index.html
@@ -4,16 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Excursion</title>
     <link rel="stylesheet" href="resources/css/style.css">
 </head>
 <body>
+    <!--Header-->
     <h1>Discover hidden places in the world around you</h1>
-    <a href="">Download Excursion (Coming soon!)</a>
+    <a href="#">Download Excursion (Coming soon!)</a>
+
+    <!--Main content-->
     <p>
-      <video loop autoplay>
+      <video loop muted autoplay>
           <source src="resources/videos/excursion.mp4" type="video/mp4">
-          video not supported
       </video>
     </p>
     <div>
@@ -24,10 +26,12 @@
     <div>
         <p><img src="resources/images/phone.png" alt="phone image"></p>
         <h2>Coming soon for iPhone and Android</h2>
-        <a href="">Download Excursion (Coming soon!)</a>
+        <a href="#">Download Excursion (Coming soon!)</a>
     </div>
+
+    <!--Footer-->
     <div class="text footer">
-        <p>© Excursion </p>
+        <p>&copy; Excursion </p>
     </div>
 </body>
 </html>
